--- a/infra-viewer/apps/website/src/styles.scss
+++ b/infra-viewer/apps/website/src/styles.scss
@@ -1,24 +1,10 @@
-$global-primary-background: #02357c;
 .ag-row .ag-cell {
   display: flex;
   align-items: center;
 }
 
 
-// 1. Your custom variables and variable overwrites.
-@import "theme/text.scss";
-@import "theme/forms.scss";
-
-
-// 2. Import default variables and available mixins.
-@import "uikit/src/scss/variables.scss";
-@import "uikit/src/scss/mixins.scss";
-
-// 3. Your custom mixin overwrites.
-//@import "theme/align-mixins.scss";
-
-// 4. Import UIkit
-@import "uikit/src/scss/uikit.scss";
+@import "theme/theme";
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 @import "aos/dist/aos.css";
