Setup for a renderer (symbol) editor, but it's too much work. Next commit will remove this, but I want to save progress in case I come back to this.

--- a/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
+++ b/infra-viewer/apps/website/src/app/shared/components/layer-editor/layer-editor.component.html
@@ -149,7 +149,7 @@
       <div class="uk-form-controls">
         <select class="uk-select" id="symbolType" name="symbolType"
                 [(ngModel)]="selectedLayer.renderer.symbol.type">
-          <option value="simple-marker">Simple Marker</option>
+          <option value="simple-marker" *ngFor="let symbolType of compatibleSymbolTypes">Simple Marker</option>
           <option value="simple-line">Simple Line</option>
           <option value="simple-fill">Simple Fill</option>
         </select>
